# 2026.1-compiladores

./: .gitignore  404.html  Makefile  README.md  index.html  main.py  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml
assets/: railroad-diagram-generator.txt
docs/: grammar.en.md  grammar.md  grammar.txt  index.md  syntax.en.md  syntax.md
en/: index.html
en/grammar/: index.html
en/syntax/: index.html
examples/: ex1.fk  ex2.fk  ex3.fk  ex4.fk  ex5.fk
grammar/: index.html
lexer/: __init__.py
search/: search_index.json
semantic/: __init__.py
src/fucklang/: __init__.py  cli.py  codegen.py  lexer.py  node.py  parser.py  symbol.py  token.py
syntax/: index.html
tests/: test_codegen.py  test_lexer.py  test_parser.py  test_symbol.py
