[project]
name = "fucklang"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "luanmateuzz@gmail.com" }
]
requires-python = ">=3.13"

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocs-static-i18n>=1.3.1",
]

[project.scripts]
fucklang = "fucklang:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
