[project]
name = "fucklang"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "luanmateuzz@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
fucklang = "fucklang.cli:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.17",
]

[tool.ruff]
line-length = 79
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
