[project]
name = "fucklang"
version = "0.1.2"
description = "fucklang compiler"
readme = "README.md"
authors = [
    { email = "luanmateuzz@gmail.com" }
    { email = "williamsoaresporto2@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
fucklang = "fucklang.cli:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.17",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocs-static-i18n>=1.3.1",
]

[tool.ruff]
line-length = 79
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
